...
        android:paddingBottom="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
...
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/fab_new"
        app:layout_constraintEnd_toEndOf="@+id/fab_new"
        app:srcCompat="@drawable/twitter_icon_copy" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
...
