...
    <string name="app_name">Rep Messenger</string>

    <!-- Page Title Strings -->

    <!-- Menu Strings -->
    <string name="action_filter_results">Filter Results</string>
    <string name="action_manage_templates">Manage Templates</string>
    <string name="action_about">About</string>

    <string-array name="array_filter_locality">
        <item>Country</item>
        <item>State</item>
        <item>County</item>
...
